FIX: wrapping issue on registrar list.

--- a/perma_web/static/bundles/global-styles.css
+++ b/perma_web/static/bundles/global-styles.css
@@ -12361,7 +12361,7 @@ footer #boilerplate a {
   font-weight: 200;
   border: none;
   border-radius: 3px;
-  padding: 2px 11px;
+  padding: 2px 9px;
   margin-bottom: 4px;
   background-color: rgba(100, 100, 100, 0.07);
   width: 100%;
