--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -3821,7 +3821,7 @@ footer {
   font-weight: 200;
   border: none;
   border-radius: 3px;
-  padding: 2px 11px;
+  padding: 2px 9px;
   margin-bottom: $half;
   background-color: $color-trans-whispergray;
   width: 100%;
